# Email-manager

./: .gitignore  CATEGORY_BASED_ARCHIVING.md  NOREPLY_FIX.md  OUTLOOK_PAGINATION_FIX.md  PAGINATION_UPDATE.md  README.md  SETUP_GUIDE.md  api_server.py  check_setup.py  email_manager.py  gmail_handler.py  outlook_credentials.json.template  outlook_handler.py  pyproject.toml  requirements.txt
email_core/: __init__.py  __main__.py  audit_log.py  gmail_adapter.py  gmail_service.py  models.py  policy_engine.py  policy_loader.py  report_writer.py  run_daily_review.py
fixtures/: sample_emails.json  sample_policy.json
tests/: test_audit_log.py  test_gmail_adapter.py  test_gmail_service.py  test_models.py  test_packaging.py  test_policy_engine.py  test_policy_loader.py  test_report_writer.py  test_run_daily_review.py
